# reminders_bot

./: .env.example  .gitignore  alembic.ini  pyproject.toml
bot/: __main__.py  config_reader.py
bot/config_data/: config.py
bot/database/db/: engine.py
bot/database/migrations/: env.py
bot/database/migrations/versions/: 8df1e5afc0bb_.py
bot/database/models/: base.py  user.py
bot/database/repositories/: repo_user.py
bot/filters/: is_admin.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  callback_query.py  commands.py  texts.py
bot/handlers/user/: __init__.py  commands.py
bot/keyboards/: inline_kbs.py  replay_kbs.py
bot/lexicon/: __init__.py  en.py  ru.py
bot/middlewares/: db.py
bot/utils/: utils.py
