[tool.poetry]
name = "bot-template"
version = "0.1.0"
description = ""
authors = ["Denis Modesov <mdy@one-touch.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
